name:                blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iryek219/blog#readme
license:             BSD3
license-file:        LICENSE
author:              Charlie H. Shin
maintainer:          hwan.shin@gmail.com
copyright:           2017, Charlie H. Shin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*
